# actix-axum-benchmark

./: .gitignore  BENCHMARK_REPORT_20251117.md  BENCHMARK_REPORT_20251124.md  BENCHMARK_REPORT_20251201.md  BENCHMARK_REPORT_20251208.md  BENCHMARK_REPORT_20251215.md  BENCHMARK_REPORT_20251222.md  BENCHMARK_REPORT_20251229.md  BENCHMARK_REPORT_20260105.md  BENCHMARK_REPORT_20260112.md  BENCHMARK_REPORT_20260119.md  BENCHMARK_REPORT_20260126.md  BENCHMARK_REPORT_20260202.md  BENCHMARK_REPORT_20260209.md  BENCHMARK_REPORT_20260216.md  BENCHMARK_REPORT_20260223.md  BENCHMARK_REPORT_20260302.md  BENCHMARK_REPORT_20260309.md  BENCHMARK_REPORT_20260316.md  BENCHMARK_REPORT_20260323.md  BENCHMARK_REPORT_20260330.md  BENCHMARK_REPORT_20260406.md  BENCHMARK_REPORT_20260413.md  BENCHMARK_REPORT_20260420.md  README.md  analyze_results.sh  cpu_ram_benchmark.sh  docker_benchmark.sh  run_all_benchmarks.sh  summary.sh
.github/: dependabot.yml
actix-app/: Cargo.toml  Dockerfile
actix-app/src/: handlers.rs  main.rs
axum-app/: Cargo.toml  Dockerfile
axum-app/src/: handlers.rs  main.rs
benchmark_results_20251117/: actix_heavy.txt  actix_light.txt  axum_heavy.txt  axum_light.txt
benchmark_results_20251124/: actix_heavy.txt  actix_light.txt  axum_heavy.txt  axum_light.txt
benchmark_results_20251201/: actix_heavy.txt  actix_light.txt  axum_heavy.txt  axum_light.txt
benchmark_results_20251208/: actix_heavy.txt  actix_light.txt  axum_heavy.txt  axum_light.txt
benchmark_results_20251215/: actix_heavy.txt  actix_light.txt  axum_heavy.txt  axum_light.txt
benchmarks/: setup.sh  (+1 more)
(+99 files in other folders)
