[package]
name = "actix-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
