[package]
name = "axum-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
chrono = { version = "0.4.42", features = ["serde"] }
